@@ -1,6 +1,9 @@
 
 ChangeLog
  [ + added, - removed, * changed ]
+ * 18Oct2012 Fixes for DynInst launch
+             CUDA applications instrumented with DynInst now instruments
+						 routines that call cudaLaunch.
  * 17Oct2012 Added Intel OpenMP runtime instrumentation when using Dyninst.
    Also, some minor enhacenements done when using DynInst.
  * 16Oct2012 Do not use -lrt if the system automatically adds clock_gettime
